@@ -133,6 +133,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|LinkedHashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|LinkedHashSet
 import|;
 end_import
@@ -143,7 +153,29 @@ name|java
 operator|.
 name|util
 operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Set
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+operator|.
+name|Entry
 import|;
 end_import
 
@@ -1377,29 +1409,15 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-name|boolean
-name|successfullyPublished
+comment|// now collects artifacts files
+name|Map
+comment|/*<Artifact,File>*/
+name|artifactsFiles
 init|=
-literal|false
+operator|new
+name|LinkedHashMap
+argument_list|()
 decl_stmt|;
-try|try
-block|{
-name|resolver
-operator|.
-name|beginPublishTransaction
-argument_list|(
-name|md
-operator|.
-name|getModuleRevisionId
-argument_list|()
-argument_list|,
-name|options
-operator|.
-name|isOverwrite
-argument_list|()
-argument_list|)
-expr_stmt|;
-comment|// for each declared published artifact in this descriptor, do:
 for|for
 control|(
 name|Iterator
@@ -1428,12 +1446,6 @@ operator|.
 name|next
 argument_list|()
 decl_stmt|;
-comment|// copy the artifact using src patterns and resolver
-name|boolean
-name|published
-init|=
-literal|false
-decl_stmt|;
 for|for
 control|(
 name|Iterator
@@ -1448,9 +1460,6 @@ name|iterator
 operator|.
 name|hasNext
 argument_list|()
-operator|&&
-operator|!
-name|published
 condition|;
 control|)
 block|{
@@ -1465,12 +1474,16 @@ operator|.
 name|next
 argument_list|()
 decl_stmt|;
-name|published
-operator|=
-name|publish
+name|File
+name|artifactFile
+init|=
+operator|new
+name|File
 argument_list|(
-name|artifact
-argument_list|,
+name|IvyPatternHelper
+operator|.
+name|substitute
+argument_list|(
 name|settings
 operator|.
 name|substitute
@@ -1478,19 +1491,39 @@ argument_list|(
 name|pattern
 argument_list|)
 argument_list|,
-name|resolver
-argument_list|,
-name|options
+name|artifact
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|artifactFile
 operator|.
-name|isOverwrite
+name|exists
 argument_list|()
+condition|)
+block|{
+name|artifactsFiles
+operator|.
+name|put
+argument_list|(
+name|artifact
+argument_list|,
+name|artifactFile
 argument_list|)
 expr_stmt|;
+break|break;
+block|}
 block|}
 if|if
 condition|(
 operator|!
-name|published
+name|artifactsFiles
+operator|.
+name|containsKey
+argument_list|(
+name|artifact
+argument_list|)
 condition|)
 block|{
 name|Message
@@ -1602,40 +1635,9 @@ argument_list|(
 name|md
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-operator|!
-name|publish
-argument_list|(
-name|artifact
-argument_list|,
-name|options
-operator|.
-name|getSrcIvyPattern
-argument_list|()
-argument_list|,
-name|resolver
-argument_list|,
-name|options
-operator|.
-name|isOverwrite
-argument_list|()
-argument_list|)
-condition|)
-block|{
-name|Message
-operator|.
-name|info
-argument_list|(
-literal|"missing ivy file for "
-operator|+
-name|md
-operator|.
-name|getModuleRevisionId
-argument_list|()
-operator|+
-literal|": "
-operator|+
+name|File
+name|artifactFile
+init|=
 operator|new
 name|File
 argument_list|(
@@ -1651,6 +1653,30 @@ argument_list|,
 name|artifact
 argument_list|)
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|artifactFile
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+name|Message
+operator|.
+name|info
+argument_list|(
+literal|"missing ivy file for "
+operator|+
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|+
+literal|": "
+operator|+
+name|artifactFile
 operator|+
 literal|" file does not exist"
 argument_list|)
@@ -1681,6 +1707,112 @@ name|artifact
 argument_list|)
 expr_stmt|;
 block|}
+else|else
+block|{
+name|artifactsFiles
+operator|.
+name|put
+argument_list|(
+name|artifact
+argument_list|,
+name|artifactFile
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|// and now do actual publishing
+name|boolean
+name|successfullyPublished
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
+name|resolver
+operator|.
+name|beginPublishTransaction
+argument_list|(
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|,
+name|options
+operator|.
+name|isOverwrite
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// for each declared published artifact in this descriptor, do:
+for|for
+control|(
+name|Iterator
+name|iter
+init|=
+name|artifactsFiles
+operator|.
+name|entrySet
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|Map
+operator|.
+name|Entry
+name|entry
+init|=
+operator|(
+name|Entry
+operator|)
+name|iter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|Artifact
+name|artifact
+init|=
+operator|(
+name|Artifact
+operator|)
+name|entry
+operator|.
+name|getKey
+argument_list|()
+decl_stmt|;
+name|File
+name|artifactFile
+init|=
+operator|(
+name|File
+operator|)
+name|entry
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+name|publish
+argument_list|(
+name|artifact
+argument_list|,
+name|artifactFile
+argument_list|,
+name|resolver
+argument_list|,
+name|options
+operator|.
+name|isOverwrite
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 name|resolver
 operator|.
@@ -1712,14 +1844,14 @@ name|missing
 return|;
 block|}
 specifier|private
-name|boolean
+name|void
 name|publish
 parameter_list|(
 name|Artifact
 name|artifact
 parameter_list|,
-name|String
-name|srcArtifactPattern
+name|File
+name|src
 parameter_list|,
 name|DependencyResolver
 name|resolver
@@ -1730,22 +1862,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|File
-name|src
-init|=
-operator|new
-name|File
-argument_list|(
-name|IvyPatternHelper
-operator|.
-name|substitute
-argument_list|(
-name|srcArtifactPattern
-argument_list|,
-name|artifact
-argument_list|)
-argument_list|)
-decl_stmt|;
 name|IvyContext
 operator|.
 name|getContext
@@ -1804,9 +1920,6 @@ operator|=
 literal|true
 expr_stmt|;
 block|}
-return|return
-name|successful
-return|;
 block|}
 finally|finally
 block|{
