@@ -902,6 +902,167 @@ block|}
 block|}
 specifier|public
 name|void
+name|testHaltOnMissing3
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.dep.file"
+argument_list|,
+literal|"test/java/org/apache/ivy/ant/ivy-publish-multi.xml"
+argument_list|)
+expr_stmt|;
+name|IvyResolve
+name|res
+init|=
+operator|new
+name|IvyResolve
+argument_list|()
+decl_stmt|;
+name|res
+operator|.
+name|setProject
+argument_list|(
+name|project
+argument_list|)
+expr_stmt|;
+name|res
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+comment|// in this test case one artifact is available, and the other one is missing
+comment|// this should be detected early and no file should be published at all
+name|File
+name|art
+init|=
+operator|new
+name|File
+argument_list|(
+literal|"build/test/publish/multi1-1.2.jar"
+argument_list|)
+decl_stmt|;
+name|FileUtil
+operator|.
+name|copy
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org1/mod1.1/jars/mod1.1-1.0.jar"
+argument_list|)
+argument_list|,
+name|art
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|publish
+operator|.
+name|setPubrevision
+argument_list|(
+literal|"1.2"
+argument_list|)
+expr_stmt|;
+name|publish
+operator|.
+name|setResolver
+argument_list|(
+literal|"1"
+argument_list|)
+expr_stmt|;
+name|publish
+operator|.
+name|setHaltonmissing
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|publish
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"publish with haltonmissing and a missing artifact should raise an exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|BuildException
+name|ex
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|indexOf
+argument_list|(
+literal|"missing"
+argument_list|)
+operator|!=
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|indexOf
+argument_list|(
+literal|"multi2.jar"
+argument_list|)
+operator|!=
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+comment|// should have do the ivy delivering
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"build/test/publish/ivy-1.2.xml"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// should not have published the files with "transactional" resolver
+name|assertFalse
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/apache/multi"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|void
 name|testPublishNotAllConfigs
 parameter_list|()
 throws|throws
